# gameboy-emulator

./: .gitignore  Cargo.toml  README.md
opcode_codegen/: Cargo.toml
opcode_codegen/src/: main.rs  opcodes.rs  prelude.rs
src/: cli.rs  constants.rs  cpu.rs  debugger.rs  gen_opcodes.rs  main.rs  memory.rs  mmu.rs  ppu.rs  registers.rs  ui.rs  util.rs
src/cpu/: alu.rs  bits.rs  instructions.rs  interrupts.rs  jumps.rs  load.rs  loads.rs  misc.rs  mod.rs  registers.rs  timing.rs
src/mmu/: debug.rs  dma.rs  memmap.rs  mod.rs  readwrite.rs  timers.rs
src/ppu/: fetcher.rs  mod.rs  registers.rs  state_machine.rs  tile_maps.rs  tiles.rs
