[package]
name = "opcode_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = { version = "2.0.100", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
